<resources>
    <string name="app_name">CoByTuDemo</string>
    <string name="action_download">Download</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="error_parser">Błąd parsera. Spróbuj ponownie.</string>
    <string name="error_network">Błąd sieci. Spróbuj ponownie.</string>
    <string name="error_server">Błąd serwera. Spróbuj ponownie za chwilę.</string>
    <string name="error_auth_failure">Błąd uwierzytelnienia. Spróbuj ponownie.</string>
    <string name="error_network_timeout">Błąd sieci. Podłącz się do internetu i spróbuj ponownie.</string>
    <string name="suggestion_send">Gotowe</string>
    <string name="suggestion_restaurant_name">Nazwa restauracji*</string>
    <string name="suggestion_restaurant_city">Miasto*</string>
    <string name="suggestion_restaurant_street">Ulica</string>
    <string name="suggestion_restaurant_street_number">Nr.</string>
    <string name="suggestion_restaurant_phone_number">Numer telefonu restauracji</string>
    <string name="suggestion_restaurant_email">Email</string>
    <string name="accessibility_overflow">accessibility_overflow</string>
    <string name="drawer_ingredients">Ocena składników</string>
    <string name="drawer_additionals">Ocena dodatków</string>
    <string name="drawer_meals_for_me">Dania dla mnie</string>
    <string name="suggestion_restaurateur">Jestem restauratorem</string>
    <string name="drawer_profie">Profil</string>
    <string name="drawer_logout">Wyloguj</string>
    <string name="action_settings">Settings</string>
    <string name="mainCourseDetailsActivity">MainCourseDetailsActivity</string>
    <string name="userProfileActivity">UserProfileActivity</string>
    <string name="ingredientsCategories">IngredientCategories</string>
    <string name="additionalCategories">AdditionalCategories</string>
    <string name="mainActivityTitle">Dania dla mnie</string>
    <string name="ingredientsList">IngredientsList</string>
    <string name="additionalsList">AdditionalsList</string>
    <string name="ingredientCategoriesActivityTitle">Lista kategorii składników</string>
    <string name="additionalCategoriesActivityTitle">Lista kategorii dodatków</string>
    <string name="subtitle"> 
        Jedz tylko to co lubisz...</string>
    <string name="wrong_password_title">Nieprawidłowe hasło</string>
    <string name="wrong_password_text">Wprowadzone hasło jest nieprawidłowe. Spróbuj ponownie.</string>
    <string name="wrong_register_data_title">Nieprawidłowe dane</string>
    <string name="wrong_register_data_passwords">Hasła muszą być takie same.</string>
    <string name="wrong_register_data_text">Login musi mieć więcej niż 3 znaki.\nHasło musi mieć więcej niż 6 znaków.\nNie używaj polskich znaków.\n\nPopraw:\n</string>
    <string name="wrong_register_data_text_end">\n\nUzupełnij wszystkie pola.</string>
    <string name="ok">OK</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Ustawienia</string>
    <string name="menu_information">Informacje</string>
    <string name="menu_suggest_restaurant">Poleć restaurację</string>
    <string name="menu_logout">Wyloguj</string>
    <string name="menu_back_to_login">Wróć do logowania</string>
    <string name="actualize_app_data">Zaktualizuj dane</string>
    <string name="regulations">Regulamin</string>
    <string name="policy">Polityka prywatności</string>
    <string name="app_version">Wersja</string>
    <string name="todo">TODO</string>
    <string name="kategoria">Kategoria</string>
    <string name="kategorie">Kategorie</string>
    <string name="brak_danych">Brak danych</string>
    <string name="refresh_kategorie">Odśwież kategorie</string>
    <string name="refresh_skladniki">Odśwież składniki</string>
    <string name="zjedz_cos">Zjedz coś</string>
    <string name="zapisz_preferencje">Zapisz preferencje</string>
    <string name="save">Zapisz</string>
    <string name="wiecej">Więcej</string>
    <string name="zero">0</string>
    <string name="nazwa_dania">Nazwa dania</string>
    <string name="cena">800,00</string>
    <string name="czas">Czas</string>
    <string name="ocena_dania">100</string>
    <string name="sto">100</string>
    <string name="filters">Filtry</string>
    <string name="save_filters">Filtruj</string>
    <string name="location">Lokalizacja</string>
    <string name="save_location">Zatwierdź</string>
    <string name="description">Opis</string>
    <string name="currency">PLN</string>
    <string name="calories">kcal</string>
    <string name="allergens">Alergeny</string>
    <string name="no_allergens">To danie nie zawiera żadnych alergenów.</string>
    <string name="register">Zarejestruj się</string>
    <string name="first_name">Imię</string>
    <string name="last_name">Nazwisko</string>
    <string name="email">E-mail</string>
    <string name="username">Login</string>
    <string name="password">Hasło</string>
    <string name="password_repeated">Powtórz hasło</string>
    <string name="city">Miejscowość</string>
    <string name="district">Województwo</string>
    <string name="student">Student</string>
    <string name="register_student">Jestem studentem - szansa na zniżki</string>
    <string name="logging">LOGOWANIE</string>
    <string name="registering">REJESTRACJA</string>
    <string name="decline_text">Wejdź bez logowania</string>
    <string name="register_text">Rejestracja</string>
    <string name="back_to_login">Wróć do logowania</string>
    <string name="welcome_user">Cześć</string>
    <string name="register_new_user">Utwórz konto</string>
    <string name="register_completed">Zarejestrowano pomyślnie!</string>
    <string name="register_completed_email_info">Odbierz maila i potwierdź rejestrację</string>
    <string name="user_profile_email">E-mail</string>
    <string name="user_profile_city">Miejscowość</string>
    <string name="user_profile_district">Województwo</string>
    <string name="user_profile_student">Student</string>
    <string name="user_profile_allergens_info">Jak reagować na zawartość alergenu?</string>
    <string name="user_profile_allergens_info_0"> Wszystko w normie</string>
    <string name="user_profile_allergens_info_1"> Uważaj, jak zjesz to spuchnie Ci gardło</string>
    <string name="user_profile_allergens_info_2"> Nie jedz tego, bo umrzesz!</string>
    <string name="user_profile_allergens_no_action">Wyświetlaj dania</string>
    <string name="user_profile_allergens_caution_display">Wyświetlaj ostrzeżenia</string>
    <string name="user_profile_allergens_no_display">Nie wyświetlaj dania lub dodatku!</string>
    <string name="user_profile_allergens_milk">Mleko</string>
    <string name="user_profile_allergens_sesame">Sezam</string>
    <string name="user_profile_allergens_peanuts">Orzeszki ziemne</string>
    <string name="user_profile_allergens_fish">Ryby</string>
    <string name="user_profile_allergens_shellfish">Skorupiaki</string>
    <string name="user_profile_allergens_sulfur">SO2 i siarczany</string>
    <string name="user_profile_allergens_molluscs">Mięczaki</string>
    <string name="user_profile_allergens_celery">Seler</string>
    <string name="user_profile_allergens_eggs">Jaja</string>
    <string name="user_profile_allergens_charlock">Gorczyca</string>
    <string name="user_profile_allergens_lupine">Łubin</string>
    <string name="user_profile_allergens_soy">Soja</string>
    <string name="user_profile_allergens_nuts">Orzechy</string>
    <string name="user_profile_allergens_cereals">Zboża</string>
    <string name="user_profile_email_et">przyklad@domena.pl</string>
    <string name="user_profile_city_et">Miejscowość</string>
    <string name="user_profile_district_et">Województwo</string>
    <string name="main_course_photo">Zdjęcie dania</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet.</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="drawerFirstRowSeeProfile">Zobacz swój profil</string>
    <string name="logoutAlertTitle">Wylogowanie</string>
    <string name="logoutAlertMessage">Czy na pewno chcesz się wylogować?</string>
    <string name="logoutAlertYesButton">Tak</string>
    <string name="logoutAlertNoButton">Nie</string>
    <string name="crash_raport_toast_text">Ups, coś sie popsuło, ale spokojnie - wysłałem maila z raportem do Jacka. On to naprawi!</string>
    <string name="choose_category_eval">Wybierz ocenę kategorii</string>
    <string name="tap_to_change_eval">Dotknij buźkę, żeby ocenić składnik</string>
    <string name="fast_evaluation_text">Szybka ocena - dotknij buźkę, aby nadać jedną ocenę całej kategorii</string>
    <string name="dialog_category_eval_title">Oceń całą kategorię</string>
    <string name="dialog_category_eval_message1">Czy chcesz nadać wszystkim składnikom  w kategorii&#160;</string>
    <string name="dialog_category_eval_message2">&#160;ocenę:&#160;</string>
    <string name="filter_location_restaurant">Restauracja</string>
    <string name="install_barcode_scanner">Zainstaluj skaner</string>
    <string name="install_barcode_scanner_description1">Ta opcja wymaga skanera. \n\nMusisz zainstalować&#160;</string>
    <string name="install_barcode_scanner_description2">Barcode Scanner (ZXing)</string>
    <string name="no_meals">Wygląda na to, że nie ma dań, internet zamulił. Spróbuj ponownie.</string>
    <string name="contact">Kontakt</string>
    <string-array name="tabs_main_courses_details">
        <item>INFO</item>
        <item>RESTAURACJE</item>
        <item>OCENA</item>
        <item>OPINIE</item>
    </string-array>
    <string name="facilities">Udogodnienia</string>
    <string name="airconditioning">KLIMATYZACJA</string>
    <string name="playground">STREFA ZABAWY</string>
    <string name="takeaway">DANIA NA WYNOS</string>
    <string name="parking">WŁASNY PARKING</string>
    <string name="wifi">WI-FI</string>
    <string name="garden">OGRÓDEK LETNI</string>
    <string name="card">PŁATNOŚĆ KARTĄ</string>
    <string name="wheelchair">UDOGODNIENIA DLA NIEPEŁNOSPRAWNYCH</string>
    <string name="ingredients">Składniki dania</string>
    <string name="additionals">Dodatki</string>
    <string-array name="main_courses_details_opinions_look">
        <item>nieapetyczny</item>
        <item>kiepski</item>
        <item>poprawny</item>
        <item>apetyczny</item>
        <item>rewelacyjny</item>
    </string-array>
    <string-array name="main_courses_details_opinions_taste">
        <item>tragiczny</item>
        <item>nieokreślony</item>
        <item>dobry</item>
        <item>pyszny</item>
        <item>wyśmienity</item>
    </string-array>
    <string-array name="main_courses_details_opinions_smell">
        <item>tragiczny</item>
        <item>brak</item>
        <item>neutralny</item>
        <item>przyjemny</item>
        <item>rewelacyjny</item>
    </string-array>
    <string-array name="main_courses_details_opinions_temperature">
        <item>za niska</item>
        <item>za wysoka</item>
        <item>prawie dobra</item>
        <item>odpowiednia</item>
        <item>idealna</item>
    </string-array>
    <string-array name="main_courses_details_opinions_quantity">
        <item>bardzo mała</item>
        <item>mała</item>
        <item>średnia</item>
        <item>właściwa</item>
        <item>duża</item>
    </string-array>
    <string-array name="main_courses_details_opinions_price">
        <item>za wysoka</item>
        <item>ciut za wysoka</item>
        <item>właściwa</item>
        <item>niska</item>
        <item>bardzo niska</item>
    </string-array>
</resources>